fix(posts): prevent images from overflowing their container

--- a/public/posts.css
+++ b/public/posts.css
@@ -57,3 +57,7 @@ code:hover::-webkit-scrollbar-thumb {
 .post blockquote p {
   margin: 0;
 }
+
+.post img {
+    max-width: 100%;
+}
